fixing link overflow

--- a/djsite/static/base.css
+++ b/djsite/static/base.css
@@ -156,7 +156,9 @@ h1 {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    display: block;
     float: left;
+    max-width: 100%;
 }
 
 .blog_info {
